| Bug #34445 | Incorrectly dimensioned pool, could cause cluster-failure when doing +3 to | ||
|---|---|---|---|
| Submitted: | 10 Feb 2008 13:03 | Modified: | 10 Mar 2008 18:09 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | >6.3.8 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | 5.1+ |
| Triage: | D2 (Serious) | ||
[10 Feb 2008 13:03]
Jonas Oreland
[10 Feb 2008 13:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41986 ChangeSet@1.2874, 2008-02-10 13:06:21+01:00, jonas@perch.ndb.mysql.com +3 -0 ndb - bug#34445 Incorrectly dimensioned pool, could cause cluster-failure when doing more than 3 parallel take-overs (node restart or take-over during system restart) Move usage of getParam into separate function (called by BLOCK_CONSTRUCTOR) so that it's called on correct block
[10 Feb 2008 13:08]
Jonas Oreland
pushed to telco-6.x (>=3)
[12 Feb 2008 16:45]
Jon Stephens
Documented bugfix in 5.1.23-ndb-6.3.9 changelog as follows:
Cluster failures could sometimes occur when performing
more than three parallel takeovers during node restarts or
system restarts.
Left in PQ pending further merges.
[10 Mar 2008 14:11]
Tomas Ulin
this bug is only in telco 6.3 and upwards
[10 Mar 2008 18:09]
Jon Stephens
Updated changelog entry per note from Tomas.
