ndb - bug#34445   Incorrectly dimensioned pool, could cause cluster-failure when doing   more than 3 parallel take-overs (node restart or take-over during system restart)

Move usage of getParam into separate function (called by BLOCK_CONSTRUCTOR) so that 
    it's called on correct block